--- a/webapp/application/templates/lending/loan_application.html
+++ b/webapp/application/templates/lending/loan_application.html
@@ -94,7 +94,7 @@
     <h5 class="my-1">4. Authorization</h5>
     <div class="form-check">
       <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" value="">
+        <input class="form-check-input" type="checkbox">
          I authorize this payment schedule.
       </label>
     </div>
