--- a/webapp/application/templates/lending/loan_details.html
+++ b/webapp/application/templates/lending/loan_details.html
@@ -77,7 +77,7 @@
       <div class="col-md-8 m-0 p-0">
         <input type="hidden" name="loan_id" value="{{data['summary']['loan_id']}}" />
         <label class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" disabled>
+          <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
           <span class="custom-control-description">I agree</span>
         </label>
