--- a/webapp/application/templates/lending/loan_payoff_details.html
+++ b/webapp/application/templates/lending/loan_payoff_details.html
@@ -44,7 +44,7 @@
         <form class="row m-0 p-0" action={{url_for( 'lending_bp.payoff')}} method="post">
             <div class="col-md-8 m-0 p-0">
                 <label class="custom-control custom-checkbox">
-          <input type="checkbox" class="custom-control-input" disabled>
+          <input type="checkbox" class="custom-control-input">
           <span class="custom-control-indicator"></span>
           <span class="custom-control-description">I agree</span>
         </label>
